<resources>
    <string name="app_name">Courses</string>
    <string name="onboarding_title">Тысячи курсов\nв одном месте</string>
    <string name="onboarding_continue_button_text">Продолжить</string>
    <string name="content_description_onboarding_courses_container">Названия курсов</string>

    <!--    Вход -->
    <string name="login_screen_title">Вход</string>
    <string name="login_screen_email_text">Email</string>
    <string name="login_screen_password_text">Пароль</string>
    <string name="login_screen_sign_in_button_text">Вход</string>
    <string name="login_screen_no_account_text">Нету аккаунта?</string>
    <string name="login_screen_registration_text">Регистрация</string>
    <string name="login_screen_forgot_password_text">Забыл пароль</string>
    <string name="content_description_email_input_layout">Поле для ввода email</string>
    <string name="content_description_password_input_layout">Поле для ввода пароля</string>
    <string name="email_input_hint">example@gmail.com</string>
    <string name="password_input_hint">Введите пароль</string>

    <!--    Курсы -->
    <string name="search_courses_text_field_hint">Search courses…</string>
    <string name="course_price_text">%s ₽</string>
    <string name="course_card_to_detail_text">Подробнее</string>
    <string name="sort_type_date_text">По дате добавления</string>

    <string name="menu_home_title">Главная</string>
    <string name="menu_favorite_title">Избранное</string>
    <string name="menu_profile_title">Аккаунт</string>
    <string name="profile_screen_title">Аккаунт</string>
    <string name="favorite_screen_title">Избранное</string>
    <string name="toast_load_error_text">Ошибка загрузки</string>
    <string name="toast_course_id_text">Id курса: %d</string>

    <!--    Месяцы -->
    <string name="month_january">Января</string>
    <string name="month_february">Февраля</string>
    <string name="month_march">Марта</string>
    <string name="month_april">Апреля</string>
    <string name="month_may">Мая</string>
    <string name="month_june">Июня</string>
    <string name="month_july">Июля</string>
    <string name="month_august">Августа</string>
    <string name="month_september">Сентября</string>
    <string name="month_october">Октября</string>
    <string name="month_november">Ноября</string>
    <string name="month_december">Декабря</string>
    <string name="date_with_month">%d %s %d</string>


</resources>