<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large_28"
            android:text="@string/login_screen_title"
            android:textAlignment="textStart"
            android:textAppearance="@style/AndroidHeadline" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_screen_email_text"
            android:layout_marginBottom="@dimen/margin_small"
            android:textAlignment="textStart"
            android:textAppearance="@style/AndroidTitleMedium" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_email_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:paddingVertical="0dp"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/email_input_hint"
                android:textAppearance="@style/AndroidBodyMedium" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/passwordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/login_screen_password_text"
            android:textAlignment="textStart"
            android:textAppearance="@style/AndroidTitleMedium" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_password_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:paddingVertical="0dp"
                android:hint="@string/password_input_hint"
                android:inputType="textPassword"
                android:textAppearance="@style/AndroidBodyMedium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continueButton"
            style="@style/CoursesButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/login_screen_sign_in_button_text"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_medium">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/noAccountTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_screen_no_account_text"
                android:textAlignment="textStart"
                android:textAppearance="@style/AndroidButtonSmall" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/registrationTextView"
                android:layout_marginStart="@dimen/margin_small_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_screen_registration_text"
                android:textColor="@color/green"
                android:textAlignment="textStart"
                android:textAppearance="@style/AndroidButtonSmall" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_screen_forgot_password_text"
            android:textColor="@color/green"
            android:textAlignment="center"
            android:textAppearance="@style/AndroidButtonSmall" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_stroke_border"
            android:layout_marginTop="@dimen/margin_large_32"
            android:background="@color/stroke_color"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large_32"
            android:layout_gravity="center_horizontal">
            
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vk"/>
            
            <View
                android:layout_width="@dimen/margin_medium"
                android:layout_height="0dp"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ok"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>